@@ -25,12 +25,13 @@ key-generation utility is included with the distribution.  Simply run
 <b>tmda-keygen</b> and follow its instructions.
 <br><br>
 
-<li>Populate your "whitelist" with e-mail addresses and/or wildcard patterns,
-one per line, which are considered trusted contacts and
+<li>Populate your "whitelist" with e-mail addresses and/or wildcard
+patterns, one per line, which are considered trusted contacts and
 therefore allowed directly into your mailbox if the sender of an
-incoming message matches the list.  By default your whitelist is
-<b>~/.tmda/lists/whitelist</b>.  See <strong>FAQ</strong> for details on matching syntax.
-<br><br>
+incoming message matches the list.  You might also add your own e-mail
+address to make initial testing easier.  By default your whitelist is
+<b>~/.tmda/lists/whitelist</b>.  See <strong>FAQ</strong> for details
+on matching syntax.  <br><br>
 
 <li>If necessary, create a <b>~/.tmda/lists/blacklist</b> containing e-mail
 addresses and/or wildcard patterns of senders you want to refuse mail from.
