@@ -1,6 +1,6 @@
 <HTML>
 <!-- THIS PAGE IS AUTOMATICALLY GENERATED.  DO NOT EDIT. -->
-<!-- Tue Oct 16 11:26:40 2001 -->
+<!-- Tue Oct 16 13:45:19 2001 -->
 <!-- USING HT2HTML 1.2 -->
 <!-- SEE http://barry.wooz.org/software/ht2html -->
 <!-- User-specified headers:
@@ -160,12 +160,13 @@ key-generation utility is included with the distribution.  Simply run
 <b>tmda-keygen</b> and follow its instructions.
 <br><br>
 
-<li>Populate your "whitelist" with e-mail addresses and/or wildcard patterns,
-one per line, which are considered trusted contacts and
+<li>Populate your "whitelist" with e-mail addresses and/or wildcard
+patterns, one per line, which are considered trusted contacts and
 therefore allowed directly into your mailbox if the sender of an
-incoming message matches the list.  By default your whitelist is
-<b>~/.tmda/lists/whitelist</b>.  See <strong>FAQ</strong> for details on matching syntax.
-<br><br>
+incoming message matches the list.  You might also add your own e-mail
+address to make initial testing easier.  By default your whitelist is
+<b>~/.tmda/lists/whitelist</b>.  See <strong>FAQ</strong> for details
+on matching syntax.  <br><br>
 
 <li>If necessary, create a <b>~/.tmda/lists/blacklist</b> containing e-mail
 addresses and/or wildcard patterns of senders you want to refuse mail from.
